Sun May 12 15:20:14 CST 2013	<shadowglen@me.com>
* Fixed some call-time pass-by-reference bug
* Now user's screen_name can be shown without mcrypt module, but it may be not correct

Mon Mar 11 14:15:15 CST 2013	<shadowglen@me.com>
* Changed max_id calculation to using bcmath module

Sun Mar 10 21:49:40 CST 2013	<shadowglen@me.com>
* Fixed "unable to load text box in some pages" bug

Sun Mar 10 16:13:05 CST 2013	<shadowglen@me.com>
* Changed lists create/edit function to ajax style

Sat Mar  9 22:17:51 CST 2013	<shadowglen@me.com>
* Fixed member deletion function of list

Sat Mar  9 17:55:22 CST 2013	<shadowglen@me.com>
* Changed lists adding members function to ajax style

Sat Mar  9 15:16:16 CST 2013	<shadowglen@me.com>
* Fixed lists created by user page
* Fixed protection option on list create/edit form

Fri Mar  8 16:50:44 CST 2013	<shadowglen@me.com>
* Fixed avatar uploading function
* Checked js files about sidebar and decided not to regard "Unable to Lock Top" as a bug

Fri Mar  8 00:46:37 CST 2013	<shadowglen@me.com>
* Fixed API 1.1 format and auto-load in Home page, User page, Profile page, and Replies page

Wed Mar  6 22:03:15 CST 2013  <moeallenz@gmail.com>
* Fixed auto-load in Fav page

Tue Mar  5 15:28:34 CST 2013	<shadowglen@me.com>
* Fixed auto-load in List Statuses page and Retweets page

Tue Mar  5 03:12:41 CST 2013	<shadowglen@me.com>
* Updated jQuery Infinite Scroll plugin to support user-defined Next Page
* Fixed auto-load in Search and DM pages (Change "Back" link id to "less" to avoid loading the same page)

Mon Mar  4 14:30:47 CST 2013	<shadowglen@me.com>
* Updated search page to API 1.1

Sun Mar  3 02:39:50 CST 2013	<shadowglen@me.com>
* Changed update_with_media function into API 1.1 format

Sat Mar  2 23:13:54 CST 2013  <moeallenz@gmail.com>
* Updated embr version to 0.6.1(f-91)

Sat Mar  2 23:00:30 CST 2013  <moeallenz@gmail.com>
* Fixed user profile page

Sat Mar  2 21:20:43 CST 2013	<shadowglen@me.com>
* Initial log